gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fastapi-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fastapi
spec:
  hosts:
  - "*"
  gateways:
  - fastapi-gateway
  http:
  - route:
    - destination:
        host: fastapi-service
        port:
          number: 80
